--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.x"
+  },
   "main": "index.js",
   "license": "MIT",
   "scripts": {
