--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "start": "node dist/server.js",
+    "postinstall": "tsc"
   },
   "dependencies": {
     "@entria/graphql-mongo-helpers": "^1.1.2",
