--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "start": "node dist/server.js",
-    "postinstall": "tsc"
+    "start": "node dist/server.js"
   },
   "dependencies": {
     "@entria/graphql-mongo-helpers": "^1.1.2",
